<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Clipay</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_regular_light">sans-serif-light</string>
    <string name="roboto_regular_condensed">sans-serif-condensed</string>
    <string name="roboto_regular_medium">sans-serif-medium</string>
    <string name="roboto_regular_thin">sans-serif-thin</string>
    <string name="search">Search</string>
    <string name="help_feedback"><![CDATA[Help & feedback]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="what_s_up">What\'s up?</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="activities">Activities</string>
    <string name="more">More</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>

    <string name="dialog_title">Insert link</string>
    <string name="dialog_edit_hint">http(s)://</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="reply">reply</string>

    <!--
      Exo PLayer
    -->
    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>

    <string name="error_generic">Playback failed</string>

    <string name="error_unrecognized_abr_algorithm">Unrecognized ABR algorithm</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="sample_list_load_error">One or more sample lists failed to load</string>

    <string name="ima_not_loaded">Playing sample without ads, as the IMA extension was not loaded</string>

    <string name="download_start_error">Failed to start download</string>

    <string name="download_playlist_unsupported">This demo app does not support downloading playlists</string>

    <string name="download_drm_unsupported">This demo app does not support downloading protected content</string>

    <string name="download_scheme_unsupported">This demo app only supports downloading http streams</string>

    <string name="download_ads_unsupported">IMA does not support offline ads</string>
    <string name="transition">trans</string>
    <string name="temp_desc">Greyhound divisively hello coldly wonderfully marginally far upon excluding.</string>

</resources>
