<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_item_one"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_item_two"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_item_three"
            android:icon="@drawable/ic_poll_black_24dp"
            android:title="@string/activities" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_item_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_item_help_feedback"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/help_feedback" />
            <item
                android:id="@+id/nav_item_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>
</menu>