<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.BlankFragment">


    <EditText
        android:id="@+id/edit_query"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grad_002_night_fade"
        android:fontFamily="@string/roboto_regular_medium"
        android:gravity="center"
        android:hint="@string/what_s_up"
        android:lineSpacingExtra="@dimen/_10sdp"
        android:padding="@dimen/_16sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_20ssp"
        tools:text="@string/hello_blank_fragment" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/color_picker_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_46sdp"
        android:background="@drawable/recyclerview_color_picker_background"
        android:orientation="horizontal"
        android:padding="@dimen/_3sdp"
        tools:listitem="@layout/colors" />
</FrameLayout>